# Atlas

./: .gitattributes  .gitignore  README.md  pyproject.toml
docs/: CONTRACT.md
src/atlas/: benchmark_smoke.py  blender_backend.py  contract.py  log_jsonl.py  mcp_stdio_server.py  registry.py  run_step.py  run_step_v2.py  scoring.py  snapshot_diff.py  snapshot_diff_v2.py  tools_benchmark.py  tools_blender.py  tools_core.py  tools_diff.py  tools_run.py  tools_run_v2.py  tools_train.py  train_loop.py
src/atlas.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_benchmark_smoke.py  test_blender_add_cube.py  test_blender_snapshot.py  test_core.py  test_mcp_stdio.py  test_run_step.py  test_snapshot_diff.py  test_train_loop.py
tools/: blender_add_cube_v1.py  blender_init_empty_v1.py  blender_snapshot_v1.py  blender_snapshot_v2.py  http_bridge.py  mcp_smoke_client.py  run_benchmark_smoke.ps1  start_atlas_mcp.ps1  start_http_bridge.ps1
